--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <menu>
       <ul>
-        <li onclick="addMode()">➕</li>
-        <li onclick="remove()">➖</li>
-        <li onclick="edit()">✎</li>
+        <li onclick="addMode()">＋</li>
+        <li onclick="remove()">－</li>
+        <li onclick="edit()">✕</li>
       </ul>
     </menu>
   </body>
